--- a/deno.json
+++ b/deno.json
@@ -5,14 +5,14 @@
     "format": "deno fmt --ignore=README.md,dist,script,CASIO"
   },
   "imports": {
-    "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.0",
-    "@std/assert": "jsr:@std/assert@1",
-    "@types/react": "npm:@types/react@^18.3.12",
-    "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.3",
-    "react": "npm:react@^18.3.1",
-    "react-dom": "npm:react-dom@^18.3.1",
-    "react-router-dom": "npm:react-router-dom@^6.28.0",
-    "vite": "npm:vite@^5.4.11"
+    "@deno/vite-plugin": "npm:@deno/vite-plugin@^1.0.4",
+    "@std/assert": "jsr:@std/assert@^1.0.11",
+    "@types/react": "npm:@types/react@^19.0.11",
+    "@vitejs/plugin-react": "npm:@vitejs/plugin-react@^4.3.4",
+    "react": "npm:react@^19.0.0",
+    "react-dom": "npm:react-dom@^19.0.0",
+    "react-router-dom": "npm:react-router-dom@^7.3.0",
+    "vite": "npm:vite@^6.2.2"
   },
   "compilerOptions": {
     "types": [
