Add base path to publish-pages

--- a/.github/workflows/publish-pages.yml
+++ b/.github/workflows/publish-pages.yml
@@ -35,6 +35,8 @@ jobs:
           deno-version: v2.x
 
       - name: Build project
+        env:
+          VITE_BASE_PATH: /FreeCell
         run: deno task build
 
       - name: Setup Pages
